# genai-automations

./: .gitignore  .pylintrc  CLAUDE.md  README.md  pyproject.toml  setup.py  sync-configs.sh
.claude/: settings.local.json
anki_sync/: CLAUDE.md  (+7 more)
tools/codex-flow/: Makefile  README.md  pyproject.toml
tools/codex-flow/codex_flow/: __init__.py  __main__.py  cli.py  contracts.py  exceptions.py  markdown_parser.py  progress.py  prompting.py  runner.py
tools/codex-flow/codex_flow/resources/: __init__.py
tools/codex-flow/codex_flow/resources/skills/: CODEX.md
tools/codex-flow/codex_flow/resources/skills/coder/: SKILL.md
tools/codex-flow/codex_flow/resources/skills/languages/: bash.md  cpp.md  python.md
tools/codex-flow/codex_flow/resources/templates/: implementation-output-instructions.md  review-output-instructions.md
tools/codex-flow/examples/: sample-implementation-request.md  sample-review-request.md
tools/codex-flow/itest-fixture/: README.md  pyproject.toml
tools/codex-flow/itest-fixture/src/: __init__.py  example.py
tools/codex-flow/itest-fixture/tests/: conftest.py  test_example.py
tools/codex-flow/itest-review-fixture/: README.md  pyproject.toml
tools/codex-flow/itest-review-fixture/src/: __init__.py  example.py
tools/codex-flow/itest-review-fixture/tests/: conftest.py  test_example.py
tools/codex-flow/planning/reviews/: codex-flow-progress-review-request.md  codex-flow-progress-review.md
tools/codex-flow/scripts/: codex-bwrap-apparmor
tools/codex-flow/tests/: test_cli.py  test_markdown_parser.py  test_prompting.py  test_runner.py
(+48 files in other folders)
